# blockz

./: .editorconfig  CNAME  Cargo.toml  LICENSE  Makefile  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  rust.yml
blockz/: all.html  attr.singleton_fn.html  derive.Configuration.html  derive.Singleton.html  index.html  sidebar-items.js
blockz-config/: Cargo.toml
blockz-config/src/: lib.rs
blockz-config/tests/: tests_config_macro.rs
blockz-databases/: Cargo.toml
blockz-databases/src/: lib.rs  redis.rs
blockz-futures/: Cargo.toml  README.md
blockz-futures/examples/: extensions_cancel.rs  extensions_multiple_interrupts.rs  extensions_timeout.rs
blockz-futures/src/: cancel.rs  error.rs  ext.rs  flatten_interrupt.rs  flatten_interrupts.rs  lib.rs  timeout.rs
blockz/configuration/: index.html  sidebar-items.js  struct.DirectConfiguration.html  struct.EnvConfiguration.html  trait.Configuration.html  trait.EasyConfiguration.html
blockz/prelude/: attr.singleton_fn.html  derive.Configuration.html  derive.Singleton.html  index.html  sidebar-items.js
blockz/singleton/: index.html  sidebar-items.js  trait.Singleton.html  trait.SingletonFn.html  trait.SingletonFnMut.html  trait.SingletonFnMutWithArg.html  trait.SingletonFnWithArg.html
blockz_derive/: Cargo.toml  all.html  attr.singleton_fn.html  build.rs  derive.Configuration.html  derive.Singleton.html  index.html  sidebar-items.js
blockz_derive/common/: fn.create_doc.html  fn.create_lit_str.html  index.html  sidebar-items.js
blockz_derive/configuration/: index.html  sidebar-items.js  struct.ConfigurationFactory.html  struct.ConfigurationOpts.html  type.DynFactory.html  type.DynFactoryProduct.html  type.FnNewDynFactory.html
blockz_derive/configuration/direct/: index.html  sidebar-items.js  struct.DirectConfigurationFactory.html
blockz_derive/configuration/env/: index.html  sidebar-items.js  struct.EnvConfigurationFactory.html  struct.EnvConfigurationOpts.html
blockz_derive/errors/: index.html  sidebar-items.js  trait.ProcMacroErrorExt.html
blockz_derive/factory/: index.html  sidebar-items.js  trait.Factory.html  trait.ReusableFactory.html
blockz_derive/paths/: fn.anyhow_path.html  fn.blockz_path.html  fn.envy_path.html  fn.once_cell_path.html  fn.std_path.html  fn.tokio_path.html  index.html  sidebar-items.js
blockz_derive/singleton/: constant.SINGLETON_STATIC_PREFIX.html  index.html  sidebar-items.js  struct.SingletonFactory.html  struct.SingletonFnFactory.html  struct.SingletonOpts.html
blockz_derive/singleton/derive_static/: index.html  sidebar-items.js  struct.SingletonStaticFactory.html
blockz_derive/singleton/derive_trait/: index.html  sidebar-items.js  struct.SingletonTraitFactory.html
blockz_derive/singleton/facade_fn/: index.html  sidebar-items.js  struct.FacadeFnFactory.html
blockz_derive/singleton/impl_fn/: constant.SINGLETON_FN_MUT_PREFIX.html  constant.SINGLETON_FN_MUT_WITH_ARG_PREFIX.html  constant.SINGLETON_FN_PREFIX.html  constant.SINGLETON_FN_WITH_ARG_PREFIX.html  index.html  sidebar-items.js  struct.ImplFnFactory.html
blockz_derive/singleton/lock/: enum.SingletonLock.html  index.html  sidebar-items.js
blockz_derive/singleton/singleton_fns/: constant.SINGLETON_FN_TUPLE_ARG_NAME.html  enum.SingletonFnArgs.html  enum.SingletonFnError.html  enum.SingletonFnType.html  fn.fn_arg_as_receiver.html  fn.fn_arg_as_typed.html  fn.pat_type_as_ident.html  index.html  sidebar-items.js
blockz_derive/src/: common.rs  configuration.rs  errors.rs  factory.rs  lib.rs  paths.rs  singleton.rs
blockz_derive/src/configuration/: direct.rs  env.rs  envy.rs  mod.rs
blockz_derive/src/singleton/: derive_static.rs  derive_trait.rs  facade_fn.rs  impl_fn.rs  lock.rs  mod.rs  singleton_fns.rs
blockz_derive/test/: basic_derive.rs
examples/: configuration.rs  envy_configuration.rs  envy_configuration2.rs  singleton.rs
implementors/blockz/singleton/: trait.SingletonFnMutWithArg.js
implementors/blockz_derive/factory/: trait.ReusableFactory.js
implementors/core/convert/: trait.Into.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/darling_core/from_derive_input/: trait.FromDeriveInput.js
implementors/darling_core/from_meta/: trait.FromMeta.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/syn/spanned/: trait.Spanned.js
src/: component.rs  configuration.rs  lib.rs  singleton.rs
src/blockz/: configuration.rs.html  lib.rs.html
src/blockz/singleton/: mod.rs.html
src/blockz_derive/: common.rs.html  errors.rs.html  factory.rs.html  lib.rs.html  paths.rs.html
src/blockz_derive/configuration/: direct.rs.html  env.rs.html  mod.rs.html
src/blockz_derive/singleton/: derive_static.rs.html  derive_trait.rs.html  facade_fn.rs.html  (+4 more)
src/configuration/: env.rs  json.rs  mod.rs
tests/: singleton.rs
tests/ui/: README.md  direct_configuration-f-0.rs  direct_configuration-f-0.stderr  direct_configuration-f-1.rs  direct_configuration-f-1.stderr  direct_configuration-f-2.rs  direct_configuration-f-2.stderr  direct_configuration-p-0.rs  direct_configuration-p-1.rs  direct_configuration-p-2.rs  env_configuration-f-0.rs  env_configuration-f-0.stderr  env_configuration-f-1.rs  env_configuration-f-1.stderr  env_configuration-f-2.rs  env_configuration-f-2.stderr  env_configuration-f-3.rs  env_configuration-f-3.stderr  env_configuration-p-0.rs  env_configuration-p-1.rs  env_configuration-p-2.rs  env_configuration-p-3.rs  env_configuration-p-4.rs  env_configuration-p-5.rs  env_configuration-p-6.rs  env_configuration-p-7.rs  envy_configuration-p-1.rs  envy_configuration-p-2.rs  envy_configuration-p-3.rs  envy_configuration-p-4.rs  envy_configuration-p-5.rs  envy_configuration-p-6.rs  envy_configuration-p-7.rs  envy_configuration_good.rs  singleton-f-0.rs  singleton-f-0.stderr  singleton-f-1.rs  singleton-f-1.stderr  singleton-f-2.rs  singleton-f-2.stderr  (+18 more)
