[package]
name = "blockz"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "blockz_derive",
]

[[example]]
name = "singleton"

[dependencies]
# Proc macro crate dependency.
blockz_derive = { path = "./blockz_derive" }

# Library dependencies.
anyhow      = "^1.0"
async-trait = "^0.1"
once_cell   = "^1.5"
serde       = "^1.0"

[dev-dependencies]
anyhow      = "^1.0"
async-trait = "^0.1"
once_cell   = "^1.5"

[dev-dependencies.tokio]
version  = "^1.0"
features = ["full"]

[features]
default = ["configuration", "singleton"]

# Enables the singleton trait and singleton derives.
singleton = ["blockz_derive/singleton"]

# Enables the configuration trait and configuration derives.
configuration = ["blockz_derive/configuration"]

# Pass this feature to blockz_derive.
no_absolute_paths = ["blockz_derive/no_absolute_paths"]
