[package]
name = "blockz"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "blockz_derive",
]

[dependencies]
# Proc macro crate dependency.
blockz_derive = { path = "./blockz_derive", version = "0.1.0" }

# Library dependencies.
anyhow      = "^1.0"
async-trait = "^0.1"

# Optional (feature) dependencies.
[dependencies.envy]
version  = "^0.4"
optional = true

[dependencies.serde]
version  = "^1.0"
optional = true

[dev-dependencies]
once_cell = "^1.5"
trybuild  = "^1.0"

[dev-dependencies.serde]
version  = "^1.0"
features = ["derive"]

[dev-dependencies.tokio]
version  = "^1.0"
features = ["full"]

[features]
default = ["configuration", "singleton"]

all = ["singleton", "configuration", "envy_configuration"]

# Enables the singleton trait and singleton derives.
singleton = ["blockz_derive/singleton"]

# Enables the configuration trait and configuration derives.
configuration = ["blockz_derive/configuration"]

# Pass this feature to blockz_derive.
no_absolute_paths = ["blockz_derive/no_absolute_paths"]

# Features

# Enables sourcing configurations from envy.
envy_configuration = ["configuration", "blockz_derive/envy_configuration", "envy", "serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
