[package]
name = "blockz-config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dev-dependencies.figment]
version  = "0.10"
features = ["env", "test"]

[dev-dependencies.serde]
version  = "1.0"
features = ["derive"]


[dependencies]
serde   = "1.0"

[dependencies.figment]
version  = "0.10"
features = ["env"]
