[package]
name = "blockz-databases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-redis = "0.10"
metrics = "0.17"
redis = "0.21"

[dependencies.deadpool]
version  = "0.9"
default-features = false
features = ["managed"]

[dependencies.serde]
version  = "1"
features = ["derive"]

[dependencies.url]
version  = "2"
features = ["serde"]
