[package]
name = "blockz-futures"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
futures = "0.3"

[dev-dependencies.tokio]
version  = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies]
pin-project = "1.0"
thiserror   = "1.0"

[dependencies.tokio]
version  = "1.0"
features = ["sync", "time"]
