[package]
name = "blockz_derive"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.4.0"
proc-macro2 = "1.0.24"
quote       = "1.0.8"
syn         = "1.0.59"

[dev-dependencies]
anyhow      = "1.0.38"
async-trait = "0.1.42"
blockz      = { path = "../" }
config      = { version = "0.10.1", default_features = false }
envy        = "0.4.2"
once_cell   = "1.5.2"
serde       = { version = "1.0.121", features = ["derive"] }
tokio       = "1.0.2"
trybuild    = "1.0"

[features]
default = []

# This feature makes blockz_derive not try to use paths starting with root(::examle::path).
no_absolute_paths = []
