[package]
name = "blockz_derive"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2  = "^1.0"
quote        = "^1.0"
syn          = "^1.0"

[dependencies.convert_case]
version  = "^0.4"
optional = true

[features]
default = ["configuration", "singleton"]

# Enable #[derive(Singleton)].
singleton = ["convert_case"]

# Enable #[derive(Configuration)].
configuration = []

# This feature makes blockz_derive not try to use paths starting with root(::examle::path).
no_absolute_paths = []
