[package]
name = "blockz_derive"
version = "0.2.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"
description = "Blockz is an opinionated library that aims to make it a pleasure to develop networked applications in Rust."
license-file = "../README.md"
homepage = "https://docs.selftech.io/blockz_derive"
repository = "https://github.com/selftechio/blockz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling      = "^0.12"
proc-macro2  = "^1.0"
quote        = "^1.0"

[dependencies.syn]
version  = "^1.0"
features = ["full", "extra-traits"]

[dependencies.convert_case]
version  = "^0.4"
optional = true

[features]
default = ["configuration", "singleton"]

# Enable #[derive(Singleton)].
singleton = ["convert_case"]

# Enable #[derive(Configuration)].
configuration = []

# This feature makes blockz_derive not try to use paths starting with root(::examle::path).
no_absolute_paths = []

# Features

# Enables deriving env configurations.
env_configuration = ["configuration"]
